--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
 	"main": "app.js",
 	"scripts": {
 		"start": "node app",
-		"app": "nodemon app"
+		"app": "nodemon app",
+		"client": "npm start --prefix client",
+		"dev": "concurrently \"npm run app\" \"npm run client\""
 	},
 	"repository": {
 		"type": "git",
@@ -18,12 +20,13 @@
 	},
 	"homepage": "https://github.com/devjadeja49/Voting-App#readme",
 	"dependencies": {
+		"axios": "^0.19.2",
+		"bcryptjs": "^2.4.3",
+		"config": "^3.3.1",
 		"express": "^4.17.1",
-		"express-session": "^1.17.1",
-		"mongoose": "^5.9.24",
-		"passport": "^0.4.1",
-		"passport-local": "^1.0.0",
-		"passport-local-mongoose": "^6.0.1"
+		"express-validator": "^6.6.0",
+		"jsonwebtoken": "^8.5.1",
+		"mongoose": "^5.9.24"
 	},
 	"devDependencies": {
 		"concurrently": "^5.2.0",
